Revision history for Perl module Perl::MinimumVersion

1.36 2014-05-09
    - CHECK block requires 5.6.2
    - UNITCHECK block requires 5.10.0

1.35 2014-05-02
    - 'state' requires perl 5.10.0, even if you don't also see
      "use feature 'state'", because you can also write "use 5.010" to
      enable 'state'. RT#67626
    - Dropped the rule that said "use base 'Exporter'" should make a
      dependency on Perl 5.008+ RT#89173
    - Improved the fix for RT#95023. Thanks again to Paul Howarth.

1.34 2014-04-24
    - The perlver script wasn't getting installed, because it's in
      a script/ directory. RT#95023, fix from ETHER.
    - t/02_main.t was failing on older versions of perl, because
      a min version is getting reported as '5.01301' on Perl 5.010 and later,
      but as '5.013010' on earlier Perls. RT#95023. I need to understand this
      better, but want to get a passing release out.

1.33 2014-04-24
    - Internals::SvREADONLY requires perl 5.8.0
    - handle features upto lexical_subs, which requires 5.18.0
      state, switch, unicode_strings, unicode_eval, evalbytes,
      current_sub, array_base, fc, lexical_subs
    - deprecate.pm requires perl 5.12 (Alexandr Ciornii)
    - require new version of PPIx::Regexp
    - detect while(readdir $dh) (Alexandr Ciornii)
    - Switched to Dist::Zilla
    - Added required versions of modules when use'ing them
    - Reformatted Changes as per CPAN::Changes::Spec

1.32 2013-01-16
    - require new version of PPIx::Regexp
    - skip sub named keys/each/values in _each_argument() (Pedro Melo, RT#82718)
    - detect open with reference to scalar (Alexandr Ciornii)

1.31 2012-12-04
    - sort $subref requires perl 5.6 (Alexandr Ciornii)

1.30 2012-11-28
    - 'each % { $foo }' incorrectly required perl 5.14 (RT#81505)
    - 02_main.t fails in rare cases (RT#81487)

1.29 2012-11-27
    - "Use of uninitialized value in null operation" fix.
    - Adding test for "utf8::is_utf" 5.8.1 special case