@@ -3,6 +3,7 @@ Revision history for Perl module Perl::MinimumVersion
 1.36 2014-05-09
     - CHECK block requires 5.6.2
     - UNITCHECK block requires 5.10.0
+    - Stacked labels on the same statement requires 5.14.0
 
 1.35 2014-05-02
     - 'state' requires perl 5.10.0, even if you don't also see
